--- a/resources/assets/sass/site/main.scss
+++ b/resources/assets/sass/site/main.scss
@@ -4,3 +4,8 @@ $body-background: #FFFFFF;
 body {
 	background-color: $body-background;
 }
+
+.welcome-title {
+	margin-top: 100px;
+    font-size: 150px;	
+}
