--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,11 +4,12 @@
 
 // Variables
 @import "variables";
+@import "./app/app-variables";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
-
 @import "./shared/navbar";
-
 @import "./shared/side-menu";
+
+@import "./app/main";
