Interface de aula

--- a/resources/assets/sass/app/_app-variables.scss
+++ b/resources/assets/sass/app/_app-variables.scss
@@ -8,3 +8,8 @@ $default-title-size: 24px;
 	color: $default-color; 
 	margin: 5px 0px;
 }
+
+@mixin text-label() {
+	font-weight: bold;
+	margin-right: 5px;
+}
