--- a/resources/assets/sass/site.scss
+++ b/resources/assets/sass/site.scss
@@ -9,4 +9,5 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 // Site
+@import "./shared/navbar";
 @import "./site/main.scss";
