Iniciando Lista de Aulas

--- a/resources/assets/sass/app/main.scss
+++ b/resources/assets/sass/app/main.scss
@@ -1,3 +1,8 @@
 .panel.panel-default > .panel-heading > h1 {
 	@include panel-title;
 } 
+
+.table-blue-header thead tr th {
+	background-color: #3097D1;
+	color: #FFFFFF;
+}
