Jobs de feachamento implementados, falta queues

--- a/resources/assets/sass/app/main.scss
+++ b/resources/assets/sass/app/main.scss
@@ -6,3 +6,11 @@
 	background-color: #3097D1;
 	color: #FFFFFF;
 }
+
+.margin-top-20 {
+	margin-top: 20px;
+}
+
+.margin-top-10 {
+	margin-top: 10px;
+}
