--- a/resources/assets/sass/app/main.scss
+++ b/resources/assets/sass/app/main.scss
@@ -14,3 +14,11 @@
 .margin-top-10 {
 	margin-top: 10px;
 }
+
+.blur {
+	-webkit-filter: blur(5px);
+	-moz-filter: blur(5px);
+	-o-filter: blur(5px);
+	-ms-filter: blur(5px);
+	filter: blur(5px);
+}
