--- a/resources/assets/sass/shared/_navbar.scss
+++ b/resources/assets/sass/shared/_navbar.scss
@@ -31,13 +31,14 @@
 	left: 0;
 }
 
-.navbar-right > .dropdown > a {
+.navbar-right > .dropdown > a, .navbar-right > a {
     line-height: 45px;
     margin-right: 10px;
+    margin-left: 10px;
     color: $text-color;
 }
 
-.navbar-right > .dropdown > a:hover{
+.navbar-right > .dropdown > a:hover, .navbar-right > a:hover{
     text-decoration: none;
     cursor: pointer;
     background-color: none;
