--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -20,6 +20,7 @@ $brand-danger: #bf5329;
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 14px;
+$font-size-title: 16px;
 $line-height-base: 1.6;
 $text-color: #636b6f;
 
@@ -36,3 +37,9 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #f5f5f5;
+
+@mixin form-title() {
+	font-weight: bold;
+	margin-right: 5px;
+	font-size: $font-size-title;
+}
