--- a/resources/assets/sass/shared/_navbar.scss
+++ b/resources/assets/sass/shared/_navbar.scss
@@ -44,6 +44,14 @@
     background-color: none;
 }
 
+.navbar-right > .dropdown img {
+    width: 35px;
+    max-height: 35px;
+    margin-right: 5px;    
+}
+
+
+
 @media(min-width:992px) {
     .wrapper {
         padding-left: 50px;
