--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,7 +11,7 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 @import "./shared/navbar";
-@import "./shared/side-menu";
+/*@import "./shared/side-menu";*/
 
 @import "./app/main";
 @import "./app/lesson";
