--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 
 // Body
-$body-bg: #dedede;
+$body-bg: #FFFFFF;
 
 // Borders
 $laravel-border-color: darken($body-bg, 10%);
@@ -22,7 +22,7 @@ $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 14px;
 $font-size-title: 16px;
 $line-height-base: 1.6;
-$text-color: #636b6f;
+$text-color: #09797a;
 
 // Navbar
 $navbar-default-bg: #fff;
@@ -37,6 +37,11 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #f5f5f5;
+
+// Monzy
+$monyGreen: #09797a;
+$monzyYellow: #fbb634;
+$tableHeaderBg: #ffcc01; 
 
 @mixin form-title() {
 	font-weight: bold;
