--- a/resources/assets/sass/app/main.scss
+++ b/resources/assets/sass/app/main.scss
@@ -15,6 +15,10 @@
 	margin-top: 10px;
 }
 
+.margin-bottom-10 {
+    margin-bottom: 10px;
+}
+
 .yellow-icon {
     color: $monzyYellow;
 }
@@ -212,3 +216,25 @@ ul.alert-list {
     height: 50px;
 }
 
+.panel-primary > .panel-heading {
+    background-color: $monyGreen;
+}
+
+.panel-primary {
+    border-color: $monyGreen;
+}
+
+.game-img-container {
+    width: 100%;
+}
+
+.img-teacher-content > img {
+    max-width: 200px;
+    max-height: 200px;
+}
+
+ul.inline-list,  ul.inline-list > li{
+    display: inline;
+    padding-left: 0px;
+    padding-right: 10px;
+}
