--- a/resources/assets/sass/site/main.scss
+++ b/resources/assets/sass/site/main.scss
@@ -13,3 +13,41 @@ body {
 .form-title {
 	@include form-title;
 }
+
+.form-control {
+    border: solid 1px #cccccc;
+}
+
+.btn.btn-primary {
+    background-color: $text-color;
+    border-color: #096e6f;
+}
+
+.btn.btn-default {
+    border: solid 2px $text-color;
+}
+
+.btn.btn-primary:hover, .btn.btn-primary:active, .btn.btn-primary:focus {
+    background-color: #053131;
+}
+
+.modal-logo{
+    width: 50px;
+    height: 50px;
+}
+
+.panel-primary > .panel-heading {
+    background-color: $monyGreen;
+}
+
+.panel-primary {
+    border-color: $monyGreen;
+}
+
+.game-img-container {
+    width: 100%;
+}
+
+.margin-bottom-10 {
+ 	margin-bottom: 10px;   
+}
