--- a/resources/assets/sass/shared/_navbar.scss
+++ b/resources/assets/sass/shared/_navbar.scss
@@ -58,7 +58,7 @@
     background-color: none;
 }
 
-.navbar-right > .dropdown img {
+.nav-bar-photo {
     width: 35px;
     max-height: 35px;
     margin-right: 5px;    
