--- a/resources/assets/sass/app/main.scss
+++ b/resources/assets/sass/app/main.scss
@@ -157,6 +157,21 @@ ul.alert-list {
     font-weight: bold;
 }
 
+.game-home .layer {
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -ms-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+    opacity: 0;
+    background-color: #000000;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin-top: -25px;
+    margin-left: -25px;
+}
+
 .game-home .row {
     -webkit-transition: opacity 1s ease-in-out;
     -moz-transition: opacity 1s ease-in-out;
@@ -168,6 +183,10 @@ ul.alert-list {
 
 .game-home:hover .row {
     opacity: 1;
+}
+
+.game-home:hover .layer {
+    opacity: 0.5;
 }
 
 .game-home h2 {
@@ -184,7 +203,7 @@ ul.alert-list {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100% 100%; 
-    position: relative
+    position: relative;
 }
 
 .teacher-container-info {
