--- a/resources/assets/sass/app/main.scss
+++ b/resources/assets/sass/app/main.scss
@@ -193,6 +193,10 @@ ul.alert-list {
     font-weight: bold;
 }
 
+.game-home .game-description {
+    font-size: 16px;
+}
+
 .text-shadow {
     text-shadow: 2px 2px #000000 !important;
 }
