--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,7 +10,7 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 @import "./shared/navbar";
-/*@import "./shared/side-menu";*/
+@import "./shared/notifications";
 
 @import "./app/main";
 @import "./app/lesson";
