--- a/resources/assets/sass/site.scss
+++ b/resources/assets/sass/site.scss
@@ -10,6 +10,7 @@
 
 // Site
 @import "./shared/navbar";
+@import "./shared/notifications";
 @import "./shared/bootstrap-datepicker";
 @import "./shared/style";
 @import "./site/main";
