--- a/resources/assets/sass/shared/_notifications.scss
+++ b/resources/assets/sass/shared/_notifications.scss
@@ -269,6 +269,12 @@ a.notification:hover {
 .notification .media-body {
   padding-top: 5.6px;
 }
+
+.media-object img {
+  width: 100px;
+  max-height: 100px;
+}
+
 .btn-lg .notification-icon:after {
   margin-left: -8.253px;
   margin-top: -8.253px;
