--- a/resources/assets/sass/site.scss
+++ b/resources/assets/sass/site.scss
@@ -9,7 +9,7 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 // Site
-@import "./shared/navbar";
+@import "./shared/navbar-site";
 @import "./shared/notifications";
 @import "./shared/bootstrap-datepicker";
 @import "./shared/style";
