--- a/resources/assets/sass/site/main.scss
+++ b/resources/assets/sass/site/main.scss
@@ -14,6 +14,10 @@ body.set-bg {
     font-size: 16px;
 }
 
+body.set-bg-green {
+    background-color: #067879;
+}
+
 .welcome-title {
 	margin-top: 100px;
     font-size: 150px;	
@@ -195,7 +199,7 @@ ul.footer-menu li a:active {
     padding: 40px 0px;
 }
 
-.section-form h3 {
+.section-form h3, .section-form h1 {
     color: #FFFFFF;
 }
 
