Novo texto home

--- a/resources/assets/sass/site/main.scss
+++ b/resources/assets/sass/site/main.scss
@@ -131,6 +131,10 @@ div.we-bg {
     min-height: 410px;
 }
 
+.teacher-info {
+    background-color: $monyGreen;
+}
+
 .teacher-info, .monzy-team {
     border: solid 5px $monyGreen;
 }
