Ajuste imagens CS-GO

--- a/resources/assets/sass/site/main.scss
+++ b/resources/assets/sass/site/main.scss
@@ -291,6 +291,11 @@ ul.footer-menu li a:active {
     background-repeat: no-repeat; 
 }
 
+.game-bg.cs-go {
+    background-image: url('/images/cs.png'); 
+    background-repeat: no-repeat; 
+}
+
 .game-bg .layer {
     width: 294px; 
     height: 420px;
