Implementando lista de avaliações

--- a/resources/assets/sass/app/main.scss
+++ b/resources/assets/sass/app/main.scss
@@ -270,3 +270,10 @@ ul.inline-list,  ul.inline-list > li{
     color: $monyGreen;
 }
 
+ul.nav.nav-tabs li a {
+    color: $monyGreen;   
+}
+
+ul.nav.nav-tabs li.active a {
+    color: #555555;   
+}
